Maybe brain-dumping is more appropriate.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://ngty.github.com
-title: ty's engineering log
+title: ty's brain dump
 subtitle: ~ non-optimized bits & pieces
 author: Ng Tze Yang
 simple_search: http://google.com/search
