--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: tybraindump
 
 # Google Analytics
 google_analytics_tracking_id:
