Happify header wordings :)

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://ngty.github.com
-title: ty's brain dump
-subtitle: ~ non-optimized bits & pieces
+title: "%w(hashrockets spaceships bangbangs)"
+subtitle: "> non-optimized bits & pieces <"
 author: Ng Tze Yang
 simple_search: http://google.com/search
 
